- Removed the compilation of '.cm' files written in Cminor concrete syntax.
- clightgen: add option "-normalize" to avoid memory loads deep inside expressions

Bug fixing:
- Issue #179: clightgen produces wrong output for "switch" statements.
- Do not generate code for functions with "inline" specifier that are
  neither static nor extern, as per ISO C99.
- Some line number information was missing for some goto labels and switch cases.


Release 3.0.1, 2017-02-14
=========================

- Ported to Coq 8.6.


Release 3.0, 2017-02-10
=======================

Major improvements:

- Added support for 64-bit target platforms, including pointers that
  are 64-bit wide, and the ability to use 64-bit integer registers and
  arithmetic operations.  This support does not replace but comes in
  addition to CompCert's original support for 32-bit target platforms,
  with 32-bit pointers and emulation of 64-bit integer arithmetic
  using pairs of 32-bit integers.  In terms of C data models, CompCert
  used to be restricted to the ILP32LL64 model; now it also supports
  I32LP64 and IL32LLP64.

- The x86 port of CompCert was extended to produce x86-64 bit code in
  addition to the original x86-32 bit (IA32) code.  (This is the first
  instantiation of the new support for 64-bit targets described
  above.) Support for x86-64 is currently available for Linux and MacOS X.
  (Run the configure script with 'x86_64-linux' or 'x86_64-macosx'.)
  This is an early port: several ABI incompatibilities remain.

Language features:

- Support for anonymous structures and unions as members of
  structures or unions.  (ISO C11, section 6.7.2.1, para 13 and 19.)
- New built-in functions for ARM and PowerPC:
  __builtin_ctz, __builtin_ctzl, __builtin_ctzll
  (count trailing zeros, 32 and 64 bits).

Usability:

- Added options -Wxxx and -Wno-xxx (for various values of "xxx")
  to control which warnings are emitted.
- Added options -Werror=xxx and -Wno-error=xxx (for various values of "xxx")